tests/lexer/invalid/test_unterminated_comment.src
/* Этот комментарий
   никогда не 
   заканчивается 
